--- a/jade/main.jade
+++ b/jade/main.jade
@@ -14,7 +14,6 @@ body(ontouchstart).clear.md-mode
             .logo.pull-left.clear
                 <h2>MongoCMS <span>v0.0.1</span></h2>
 
-            //- Navigation Menu
             ul.clear.documents
                 li.clear
                   a(href="/").draft
@@ -52,88 +51,116 @@ body(ontouchstart).clear.md-mode
                           i.fa.fa-eye
                           | 200
 
-            footer.clear.text-center &copy; 2013<br>Powered by Express & MongoDB
+            footer.clear.text-center &copy; 2013<br>Powered by Node-Webkit
 
         #main.column
             header.clear
                 ul.nav.pull-left
                     li
-                        a(href="#") Documents
+                        a(href="#", data-target="collection") Collections
                     li
-                        a(href="#") Configure
+                        a(href="#", data-target="config") Configure
                 .status-pane.pull-right
                     p.connection Connected
                     p.status Idle
 
             .content-wrapper
-                .breadcrumbs Breadcrumbs
                 .content
                     .row.clear
                         .key.pull-left What's up Key
                         .value.pull-right Hey value
-                    .row.clear
-                        .key.pull-left What's up Key
-                        .value.pull-right Hey value
+                    .row.new.clear
+                        input.key.pull-left(placeholder="key") What's up Key
+                        input.value.pull-right(placeholder="value") Hey value
 
     .md-overlay
-    .md-content.centered
+    .md-content.centered.animate
         form(id="connect", method="post", action="#").connect
-            p.text-center.title Connect
+            .connect-pane
+                p.text-center.title Connect
 
-            .js-float-label-wrapper
-                label(for="host") Host
-                input(type="text", name="host", value="localhost")
+                .js-float-label-wrapper
+                    label(for="host") Host
+                    input(type="text", name="host", value="localhost")
 
-            .js-float-label-wrapper
-                label Port
-                input(type="text", name="port", value="27017")
+                .js-float-label-wrapper
+                    label Port
+                    input(type="text", name="port", value="27017")
 
-            .js-float-label-wrapper
-                label Database
-                input(type="text", name="database")
+                .js-float-label-wrapper
+                    label Database
+                    input(type="text", name="database")
 
-            .js-float-label-wrapper
-                label User
-                input(type="text", name="username")
+                .js-float-label-wrapper
+                    label User
+                    input(type="text", name="username")
 
-            .js-float-label-wrapper
-                label Pass
-                input(type="password", name="psw")
+                .js-float-label-wrapper
+                    label Pass
+                    input(type="password", name="psw")
 
-            select(name="collection", class="collection-list hide", style="width: 100%")
-                option Select Collection
-
-            button(class="btn center connect", type="submit") Connect
-
+                button(class="btn center connect", type="submit") Connect
+            .select-collection-pane.hide
+                p.text-center.title.clear.flat-green(style="margin-bottom: 10px; font-weight: bold;") Conected!
+                select(name="collection", class="collection-list hide clear", style="width: 100%; margin: 10px 0;")
+                    option Select Collection
+                a.show-connect.center.text-center.small(href="#")<i class="fa fa-bolt"></i> New Connection
+    span.md-overlay-x X
 
     script(type='text/template', id="listItemTemplate")
         a(href="/", data-id!="<%= id %>").draft
-            p.title <%= title || _id %>
+            p.title <%= typeof(title) !== 'undefined' ? title : id %>
             span.published.pull-left
                 | Draft
             span.views.pull-right
 
     script(type='text/template', id="listItemTemplateEdit").
+        <div class="breadcrumbs">
+            <span class="root">
+                {<a href="#" data-target="$root"><i class="fa fa-home"></i></a>}
+            </span>
+            <% _(tree).each(function(value){ %>
+                <i class="fa fa-angle-right separator"></i>
+                <a href="#" data-target="<%= value %>"><%= value %></a>
+            <% }); %>
+        </div>
+
         <% _(list).each(function(field) { %>
 
             <% if( field.key != '_id') { %>
                 <div class="row clear ">
-                    <div class="label"><%= field.key %></div>
-                    <% if(field.type == 1){ %>
+                    <span class="remove" data-key="<%= field.key %>"><i class="fa fa-times-circle"></i></span>
+                    <% if(field.type == 1 /* object */){ %>
+                        <div class="label nested"><%= field.key %></div>
+                        <span class="pull-right">
+                            <a href="#" class="navigate" data-key="<%= field.key %>" >
+                                <i class="fa fa-chevron-circle-right flat-blue"></i>
+                            </a>
+                        </span>
+                    <% }else if(field.type == 2 /* HTML */){ %>
+                        <div class="label"><%= field.key %></div>
                         <textarea data-editor="html" rows="15" class="value inEdit" data-key="<%= field.key %>"><%= field.value %></textarea>
+
                     <% }else{ %>
+                        <div class="label"><%= field.key %></div>
                         <input class="value inEdit" data-key="<%= field.key %>" value="<%= field.value %>"/>
                     <% } %>
                 </div>
             <% }else { %>
                 <div class="row clear">
                     <div class="label"><%= field.key %></div>
-                    <p><%= field.value %><p/>
+                    <p><%= field.value.idString %><p/>
                 </div>
             <% } %>
 
         <% }); %>
 
+        <button class="btn btn-add center"><span>+<span></button>
+
+    script(type='text/template', id="addAttribute")
+        .row.new.clear
+            input.newKey.pull-left(placeholder="key")
+            input.newValue.pull-right(placeholder="value")
 
     //- script(src='components/jquery/jquery.js')
     //- script(src='components/underscore/underscore.js')l
