--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -72,16 +72,26 @@ blockquote {
 .text-right          { text-align: right; }
 .text-center         { text-align: center; }
 
+
 .small   { font-size: 85%; }
 .x-small { font-size: 80%; }
+
+// Color Classes
+.flat-green  { color: $flat-green; }
+.flat-blue   { color: $flat-blue; }
+.flat-red    { color: $flat-red; }
+.flat-orange { color: $flat-orange; }
+
+
 .container{
+    overflow: hidden;
     padding-left: $sidebarWidth;
 
     .column{
         position: relative;
         float: left;
-        margin-bottom: -99999px;
-        padding-bottom: 99999px;
+        // margin-bottom: -99999px;
+        // padding-bottom: 99999px;
     }
 }
 
@@ -97,6 +107,13 @@ blockquote {
     color: #fff;
 
     $lighten-amount: 4%;
+
+    &.center{
+        left: 0;
+        right: 0;
+    }
+
+    &:focus{ outline: none }
 }
 
 /*
@@ -122,6 +139,9 @@ blockquote {
                 margin: 0;
                 &.connection{
                     color: $flat-green;
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
 
                 &.status{
@@ -144,7 +164,7 @@ blockquote {
             font-weight: normal;
             span{
                 font-size: 13px;
-                color: #27292e;
+                color: #303238;
             }
         }
     }
@@ -282,18 +302,46 @@ blockquote {
         border-radius: 3px;
         padding: 0 10px;
         box-shadow: 0 2px 0 rgba(210, 211, 212, 0.75);
+        margin: 20px 0 65px 0;
+        position: relative;
 
         h1{
             margin: 0;
         }
+        .breadcrumbs{
+            position: absolute;
+            top: -30px;
+            left: 0px;
 
+            .separator{
+                margin: 0 10px;
+            }
+
+            a{ text-decoration: none; color: $flat-blue; }
+            a:hover{ text-decoration: underline }
+        }
         .row{
             position: relative;
             padding: 22px 25px 10px 25px;
             border-bottom: 1px solid $background-main;
             margin: 0 -10px;
             &:last-child{border-bottom: 0;}
+            &:hover{ background-color: #f7fcff }
 
+            .remove{
+                position: absolute;
+                right: -5px;
+                top: 22px;
+                color: $flat-red;
+                opacity: 0;
+                transition: opacity 0.2s ease-out;
+                &:hover{ cursor: pointer }
+            }
+            &:hover{
+                .remove{
+                    opacity: 1;
+                }
+            }
             .label{
                 color: $flat-blue;
                 font-size: 11px;
@@ -301,6 +349,9 @@ blockquote {
                 top: 10px;
                 left: 25px;
                 font-weight: bold;
+                &.nested{
+                    top: inherit;
+                }
             }
 
             .value{
@@ -310,21 +361,59 @@ blockquote {
 
             input.inEdit{
                 border: none;
+                border: 1px solid transparent;
+                background-color: transparent;
 
-                &:hover,
-                &:focus{
-                    background-color: $background-main;
-                    transition: background-color 0.5s;
+                &:hover{
+                    // background-color: $background-main;
+                    border: 1px dotted #D9DDE7;
+                    // transition: background-color 0.5s;
                 }
 
                 &:focus{
-                    border: 1px dotted $gray-lightish;
                     outline: 0;
                 }
             }
 
             input.editing{
-                background-color: #FAFAFA !important;
+                background-color: white;
+            }
+
+            &.new{
+                input{
+                    display: inline;
+                    width: auto;
+                    padding: 5px 15px;
+                    margin: 5px 0;
+                    width: 47%;
+                }
+            }
+        }
+
+        .btn-add{
+            position: absolute;
+            background-color: transparent;
+            color: whitesmoke;
+            font-size: 30px;
+            padding: 0px;
+            font-weight: 200;
+            bottom: -90px;
+            width: 40px;
+            height: 40px;
+            background: #252C3A;
+            border-radius: 3px;
+            &:hover{
+                background-color:#323C50;
+            }
+
+            &.save{
+                background-color: $flat-green;
+
+                i{
+                    font-size: 20px;
+                    position: relative;
+                    top: -3px;
+                }
             }
         }
     }
@@ -383,6 +472,7 @@ blockquote {
         z-index: 147;
         display: none;
         background-color: white;
+
     }
 
     // Modal Mode
@@ -406,34 +496,29 @@ blockquote {
         }
     }
     textarea {
-            resize: vertical;
+        resize: vertical;
     }
 
     input,
     textarea {
-            display: block;
-            width: 100%;
-            border: 1px solid #eee;
-            margin: 1em 0;
-            padding: 1em;
-            color: #666;
+        display: block;
+        width: 100%;
+        border: 1px solid #eee;
+        margin: 1em 0;
+        padding: 1em;
+        color: #666;
+        &::-webkit-input-placeholder {
+           color: $gray-lighter;
+        }
 
-            -webkit-box-sizing: border-box;
-               -moz-box-sizing: border-box;
-                    box-sizing: border-box;
-
-            -webkit-appearance: none;
-               -moz-appearance: none;
-                    appearance: none;
-
-            -webkit-border-radius: 0;
-               -moz-border-radius: 0;
-                    border-radius: 0;
+        box-sizing: border-box;
+        appearance: none;
+        border-radius: 0;
     }
 
     label {
-            font-size: 0.75em;
-            color: #666;
+        font-size: 0.75em;
+        color: #666;
     }
 
     input:focus,
