--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -226,7 +226,8 @@ blockquote {
                     border-bottom: 1px solid #f2f2f2;
                     overflow: hidden;
 
-                    &:hover{
+                    &:hover,
+                    &.active{
                         background-color: #f5f5f5;
                     }
 
