- removed releases from repo - changes to readme - added some NProgress stuff - added some autoreconnect options to mongodb connection

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -670,12 +670,10 @@ blockquote {
 
 /*
   ==========================================================================
-   nprogress overrides
+   nprogress override
   ==========================================================================
 */
-body.tag-personal {@include loadingColor($tag-personal)}
-body.tag-tutorials{@include loadingColor($tag-tutorials)}
-body.tag-tips     {@include loadingColor($tag-tips)}
+body {@include loadingColor($flat-green)}
 
 /*
   ==========================================================================
