- docs edit - added connection monitoring (i'm hoping that the ping every 5 secs will also keep connection alive) - connection status now indicates proper state

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -142,6 +142,8 @@ blockquote {
                     &:hover{
                         cursor: pointer;
                     }
+
+                    &.offline{ color: $flat-red }
                 }
 
                 &.status{
