--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -250,7 +250,8 @@ blockquote {
 
                     &:hover,
                     &.active{
-                        background-color: #f5f5f5;
+                        background-color: white;
+                        box-shadow: inset 3px 0 0px $flat-blue;
                     }
 
                     p{
@@ -374,6 +375,33 @@ blockquote {
             a{ text-decoration: none; color: $flat-blue; }
             a:hover{ text-decoration: underline }
         }
+
+        #edit-controls {
+            display: inline-block;
+            float: right;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+
+            li {
+                float: left;
+                margin-right: 8px;
+
+                &:last-child{ margin-right: 0 }
+
+                a {
+                    background-color: #46647C;
+                    padding: 3px 0;
+                    width: 37px;
+                    text-align: center;
+                    color: white;
+                    border-radius: 2px;
+
+                    &:hover { background-color: #527591 }
+                }
+            }
+        }
+
         .row{
             position: relative;
             padding: 22px 25px 10px 25px;
@@ -438,7 +466,7 @@ blockquote {
                 background-color: $blue-dark;
                 border-top-left-radius: 3px;
                 border-top-right-radius: 3px;
-                padding: 7px 25px;
+                padding: 14px 25px;
                 color: #757E8A;
                 font-weight: 200;
                 .key{
