- Using save instead of update to make changes - Simplified active logic for showing active model - added copy, cut, paste shortcuts to node webkit (this should be default) - updated some packages

--- a/jade/main.jade
+++ b/jade/main.jade
@@ -12,7 +12,7 @@ body(ontouchstart).clear.md-mode
         #sidebar.column.animate
             //- Header
             .logo.pull-left.clear
-                <h2>MongoCMS <span>v0.0.1</span></h2>
+                <h2>MongoCMS <span>v0.0.3</span></h2>
 
             ul.clear.documents
                 li
@@ -164,6 +164,7 @@ body(ontouchstart).clear.md-mode
     script(src='components/nprogress/nprogress.js')
     script(src='components/floatLabel/jquery.FloatLabel.js')
     script(src='components/ace-builds/src-noconflict/ace.js')
+    script(src='components/keymaster/keymaster.js')
     script(src='js/namespaces.js')
     script(src='js/helpers.js')
     script(src='js/main.js')
