--- a/jade/main.jade
+++ b/jade/main.jade
@@ -117,7 +117,7 @@ body(ontouchstart).clear.md-mode
 
             <% if( field.key == '_id') { %>
                 <div class="row id clear">
-                    <span class="key"><%= field.key %></span> &nbsp;&nbsp;| &nbsp;&nbsp;<%= field.value.idString %>
+                    <span class="key"><%= field.key %></span> &nbsp;&nbsp;| &nbsp;&nbsp;<%= field.value %>
                     <ul id="edit-controls">
                         <li><a href="#" class="edit-raw pull-right"><i class="fa fa-code"></i></a></li>
                         <li><a href="#" class="save-raw pull-right hide"><i class="fa fa-floppy-o"></i></a></li>
