--- a/jade/main.jade
+++ b/jade/main.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= 'MongoCMS'
+    title= 'MongoCMS v0.0.3'
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
 
