more build improvements added download progress indicator to auto update. added dev tools shortcut 'cmd+alt+j'

--- a/jade/main.jade
+++ b/jade/main.jade
@@ -109,7 +109,7 @@ body(ontouchstart).clear.md-mode
     span.md-overlay-x.hide X
 
     .notification-bar.hide
-        .message <b>Update Available:</b> <a href="#">Click here</a> to upgrade to the latest version of MongoCMS. Restart Required.
+        .message <b>Update Available:</b> Click here to upgrade to the latest version of MongoCMS.
             a(href="#").close-btn X
 
     script(type='text/template', id="startPageTemplate")
